--- a/Website/static/styles/indexPage.css
+++ b/Website/static/styles/indexPage.css
@@ -139,8 +139,7 @@ body{
         right: 0;
         margin-left: auto;
         margin-right: auto;
-        
-        
+        cursor: pointer;
 }
 
 footer{
