fixed some formatting

--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -3,6 +3,7 @@
 <html>
 
     <head>
+        <title>Image</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/global-style.css') }}">
         <script src="{{url_for('static', filename='javascript/image.js')}}"></script>  
     </head>
@@ -174,9 +175,11 @@
 
             <br>
 
-            <div class="bottom-border">
-                
-            </div>
+            <!--Footer div-->
+        <div>
+                <footer>
+                </footer>
+        </div>
 
         </div>
 
