--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -9,9 +9,11 @@
       <body>
                 <!--NavBar-->
                 <div class="top-border">
-                        <div class="rosen-logo">
-                                <img src="{{url_for('static', filename='images/ROSEN_Logo_White_220.png')}}" id="logo">
-                        </div>
+                        <div class="rosen">
+                                <a href=index>
+                                    <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" width="220px" height="63px">
+                                </a>
+                            </div>
                 </div>
 
                 <!--Preview Photo area-->
