--- a/Website/static/styles/indexPage.css
+++ b/Website/static/styles/indexPage.css
@@ -124,6 +124,13 @@ body{
         margin: 0 auto;
 }
 
+.rosen {
+        position: relative;
+        display: flex;
+        left: 20px;
+        top: 20px;
+    }
+
 .run-button {
         background-color: rgb(54, 85, 120);
         color: white;
@@ -140,6 +147,10 @@ body{
         margin-left: auto;
         margin-right: auto;
         cursor: pointer;
+}
+
+.run-button:hover {
+        background-color: rgb(60, 80, 100);
 }
 
 footer{
