--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
       <html lang="en">
       <head>
-            <title>Home</title>
+            <title>Login</title>
             <link rel="stylesheet" href="{{ url_for('static',filename='styles/global-style.css') }}">
       </head>
 
