separated bottom border to be fixed at bottom page

--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -177,7 +177,7 @@
 
             <!--Footer div-->
         <div>
-                <footer>
+                <footer class='image-footer'>
                 </footer>
         </div>
 
