--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -46,7 +46,7 @@
         
         <!--Footer div-->
         <div>
-                <footer>
+                <footer class='login-footer'>
                 </footer>
         </div>
       </body>
