--- a/Website/static/styles/global-style.css
+++ b/Website/static/styles/global-style.css
@@ -370,7 +370,18 @@ body {
     height: 20px;
 }
 
-footer{
+.image-footer{
+    position: relative;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgb(54, 85, 120);
+    height: auto;
+    width: 100%;
+    padding-top: 30px;
+}
+
+.login-footer{
     position: absolute;
     bottom: 0;
     left: 0;
