change interested to bear

--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -25,9 +25,9 @@
 
         <p class="instructions-text">
             Here is our labeling image page. Please click on the image you are interested in. 
-            For example in this case, fish should be labeled as interested, and others not.<br>
+            For example in this case, bear should be labeled as interested, and others not.<br>
             Note: Images with green border is labeled as interested, and those without are labeled as not.
-            So in this example, please have all the fish images labeled as green.
+            So in this example, please have all the bear images labeled as green.
         </p>
         <br>
 
