--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -173,11 +173,9 @@
                 </a>
             </div>
 
-            <br>
-
             <!--Footer div-->
         <div>
-                <footer class='image-footer'>
+                <footer>
                 </footer>
         </div>
 
