--- a/Website/static/styles/global-style.css
+++ b/Website/static/styles/global-style.css
@@ -3,6 +3,8 @@
     border: 0;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 
 html {
@@ -93,16 +95,25 @@ html p {
 /* Styles for image.html */
 
 body {
-    max-width: 100%;
-    background-color: white;
+        
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        background: white;
 }
 
 .top-border {
-    background-color: rgb(54, 85, 120);
-    display: block;
-    position: relative;
-    height: 100px;
-    overflow: hidden;
+        background-color: rgb(54, 85, 120);
+        display: block;
+        position: fixed;
+        height: 100px;
+        overflow: hidden;
+        width: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
 }
 
 .rosen {
@@ -123,7 +134,8 @@ body {
 /* Instruction message above images */
 .label-message {
     display: block;
-    position: relative;
+    position: fixed;
+    top: 120px;
     text-align: center;
     font-size: 48px;
     color: rgb(54, 85, 120);
@@ -334,6 +346,7 @@ body {
 .homepage {
     display: block;
     text-align: center;
+    bottom: 120px;
 }
 
 
@@ -392,66 +405,6 @@ body {
     padding-top: 30px;
 }
 
-.drag-area{
-    border: 2px dashed black;
-    height: 500px;
-    width: 700px;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  .drag-area.active{
-    border: 2px solid black;
-  }
-  .drag-area .icon{
-    font-size: 100px;
-    color: black;
-  }
-  .drag-area header{
-    font-size: 30px;
-    font-weight: 500;
-    color: black;
-  }
-  .drag-area span{
-    font-size: 25px;
-    font-weight: 500;
-    color: #fff;
-    margin: 10px 0 15px 0;
-  }
-  .drag-area button{
-    padding: 10px 25px;
-    font-size: 20px;
-    font-weight: 500;
-    border: none;
-    outline: none;
-    background: black;
-    color: #5256ad;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  .drag-area img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 5px;
-  }
-
-.run-button {
-    background-color: rgb(54, 85, 120);
-    color: white;
-    border: none;
-    border-radius: 30px;
-    font-size: 16px;
-    width: 100px;
-    height: 50px;
-}
-
-.run-button:hover {
-    cursor: pointer;
-    background-color: rgb(60, 80, 100);
-}
 
 /* login.html css */
 
@@ -528,4 +481,154 @@ input:-webkit-autofill::first-line {
 
 .instructions-text {
     color: rgb(54, 85, 120);
+    justify-content: center;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+/* index.html css */
+
+/* INDEX: Drag area (Photo) section */
+.drag-area-photo{
+        border: 2px dashed rgb(54, 85, 120);
+        height: 500px;
+        width: 700px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: 10px;
+        background-color: #abc2db;
+}
+.drag-area-photo.active{
+        border: 2px solid rgb(54, 85, 120);
+}
+.drag-area-photo .icon{
+        font-size: 100px;
+        color: rgb(54, 85, 120);
+}
+.drag-area-photo header{
+        font-size: 30px;
+        font-weight: 500;
+        color: rgb(54, 85, 120);
+}
+.drag-area-photo span{
+        font-size: 25px;
+        font-weight: 500;
+        color: rgb(54, 85, 120);
+        margin: 10px 0 15px 0;
+}
+.drag-area-photo button{
+        padding: 10px 25px;
+        font-size: 20px;
+        font-weight: 500;
+        border: none;
+        outline: none;
+        background: rgb(54, 85, 120);
+        color: white;
+        border-radius: 5px;
+        cursor: pointer;
+}
+.drag-area-photo img{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        border-radius: 5px;
+}
+
+/* INDEX: Drag area (Video) section */
+.drag-area-video{
+        border: 2px dashed rgb(54, 85, 120);
+        height: 500px;
+        width: 700px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: 10px;
+        background-color: #abc2db;
+}
+.drag-area-video.active{
+        border: 2px solid rgb(54, 85, 120);
+}
+.drag-area-video .icon{
+        font-size: 100px;
+        color: rgb(54, 85, 120);
+}
+.drag-area-video header{
+        font-size: 30px;
+        font-weight: 500;
+        color: rgb(54, 85, 120);
+}
+.drag-area-video span{
+        font-size: 25px;
+        font-weight: 500;
+        color: rgb(54, 85, 120);
+        margin: 10px 0 15px 0;
+}
+.drag-area-video button{
+        padding: 10px 25px;
+        font-size: 20px;
+        font-weight: 500;
+        border: none;
+        outline: none;
+        background: rgb(54, 85, 120);
+        color: white;
+        border-radius: 5px;
+        cursor: pointer;
+}
+.drag-area-video video{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        border-radius: 5px;
+        display: none;
+}
+
+.run-button {
+        background-color: rgb(54, 85, 120);
+        color: white;
+        border: none;
+        border-radius: 10px;
+        font-weight: 500;
+        font-size: 20px;
+        width: 150px;
+        height: 60px;
+        position: absolute;
+        bottom: 10%;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        cursor: pointer;
+}
+
+.run-button:hover {
+        background-color: rgb(60, 80, 100);
+}
+
+/* INDEX: footer */
+footer{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: rgb(54, 85, 120);
+        height: auto;
+        width: 100%;
+        padding-top: 30px;
+}
+
+/* INDEX: Rosen logo */
+.top-border .rosen-logo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 15px;
 }
