--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -2,7 +2,7 @@
       <html lang="en">
       <head>
                 <title>Home</title>
-                <link rel="stylesheet" href="{{ url_for('static',filename='styles/indexPage.css') }}">
+                <link rel="stylesheet" href="{{ url_for('static',filename='styles/global-style.css') }}">
                 
       </head>
 
