--- a/Website/static/styles/indexPage.css
+++ b/Website/static/styles/indexPage.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+/* Styles that apply to everything */
 *{
         margin: 0;
         padding: 0;
         box-sizing: border-box;
         font-family: "Poppins", sans-serif;
 }
+
+/* Body section in html pages */
 body{
         display: flex;
         align-items: center;
@@ -12,6 +16,8 @@ body{
         min-height: 100vh;
         background: white;
 }
+
+/* INDEX: Drag area (Photo) section */
 .drag-area-photo{
         border: 2px dashed rgb(54, 85, 120);
         height: 500px;
@@ -60,6 +66,7 @@ body{
         border-radius: 5px;
 }
 
+/* INDEX: Drag area (Video) section */
 .drag-area-video{
         border: 2px dashed rgb(54, 85, 120);
         height: 500px;
@@ -110,7 +117,7 @@ body{
 }
 
 
-
+/* INDEX: Top border */
 .top-border {
         background-color: rgb(54, 85, 120);
         display: block;
@@ -124,6 +131,7 @@ body{
         margin: 0 auto;
 }
 
+/* INDEX: Rosen Logo Container */
 .rosen {
         position: relative;
         display: flex;
@@ -131,6 +139,7 @@ body{
         top: 20px;
     }
 
+    /* INDEX: Run button  */
 .run-button {
         background-color: rgb(54, 85, 120);
         color: white;
@@ -153,6 +162,7 @@ body{
         background-color: rgb(60, 80, 100);
 }
 
+/* INDEX: footer */
 footer{
         position: absolute;
         bottom: 0;
@@ -164,9 +174,11 @@ footer{
         padding-top: 30px;
 }
 
+/* INDEX: Rosen logo */
 .top-border .rosen-logo {
         display: flex;
         align-items: center;
         justify-content: center;
         margin-top: 15px;
 }
+
