--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -13,7 +13,7 @@
         <div class="top-border">
             <div class="rosen">
                 <a href=index>
-                    <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" class="rosen-logo" width="220px" height="63px">
+                    <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" width="220px" height="63px">
                 </a>
             </div>
         </div>
