Placeholder for modal code in image.html

--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -121,32 +121,9 @@
 
 
 
-        <!-- <div class="modal" id="modal">
-            <span class="close" id="close">
-                &times;
-            </span>
-            <img class="modal-image" src="" id="modal-img">
+    <!-- insert modal code here -->
+    
 
-            <div class="toolbar">
-                <button class="tools">
-                    <img src="{{url_for('static', filename='images/select-button-white.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/select-button-grey.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/select-button-white.svg')}}'" width="40px" height="40px">
-                </button>
-
-                <button class="tools">
-                    <img src="{{url_for('static', filename='images/pan-button-white.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/pan-button-grey.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/pan-button-white.svg')}}'" width="40px" height="40px">
-                </button>
-
-                <button class="tools" style="margin-left: 10px;">
-                    <img src="{{url_for('static', filename='images/zoom-in-button-white.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/zoom-in-button-grey.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/zoom-in-button-white.svg')}}'" width="40px" height="40px">
-                </button>
-
-                <button class="tools" style="margin-left: 5px;">
-                    <img src="{{url_for('static', filename='images/zoom-out-button-white.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/zoom-out-button-grey.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/zoom-out-button-white.svg')}}'" width="40px" height="40px">
-                </button>
-            </div>
-
-        </div> 
-    -->
 
         <br><br><br><br>
 
