--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -8,10 +8,12 @@
       <body>
         <!--NavBar-->
         <div class="top-border">
-            <div class="rosen">
-                <a href=".">
-                    <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" width="220px" height="63px">
-                </a>
+            <div class="top-elements">
+                <div class="rosen-logo">
+                    <a href=".">
+                        <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" width="220px" height="63px">
+                    </a>
+                </div>
             </div>
         </div>
 
@@ -47,6 +49,9 @@
         <!--Footer div-->
         <div>
                 <footer class='login-footer'>
+                    <div class="footer-text">
+                        ROSEN Team A
+                    </div>
                 </footer>
         </div>
       </body>
