--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -49,6 +49,9 @@
                 <!--Footer div-->
                 <div>
                         <footer>
+                                <div class="footer-text">
+                                        ROSEN Team A
+                                    </div>
                         </footer>
                 </div>
 
