--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -40,7 +40,7 @@
                 <div class="run">
                         <!--a href to redirect page to image.html-->
                         <a href=image>
-                                <button class="run-button" id="run-button">
+                                <button class="run-button">
                                 <b>Run</b>
                                 </button>
                         </a>
