--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -30,6 +30,16 @@
 
 
 
+                <div class="logout">
+                    <a href=".">
+                        <button class="logout-button">
+                            Logout
+                        </button>
+                    </a>
+                </div>
+
+
+
                 <div class="rosen-logo">
                     <a href=index>
                         <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" width="220px" height="63px">
